--- a/INDIA.properties
+++ b/INDIA.properties
@@ -8,4 +8,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
-spring.boot.message=hello , from india
+spring.boot.message=hello , from india by Priyanshu Raj
