--- a/INDIA.properties
+++ b/INDIA.properties
@@ -7,5 +7,6 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
+management.endpoints.web.exposure.include=*
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 spring.boot.message=hello , from india by Priyanshu Raj
